@@ -75,6 +75,8 @@ libpoke_modules="
   basename-lgpl
   byteswap
   configmake
+  c-strtof
+  c-strtod
   errno
   fopen-gnu
   free-posix
