@@ -22,6 +22,7 @@
 #include <signal.h>
 #include <stdarg.h>
 #include <errno.h> /* For errno.  */
+#include <c-strtod.h> /* for c_strtof and c_strtod.  */
 
 #include "pkl.h"
 #include "pkl-asm.h"
@@ -447,7 +448,7 @@ int pvm_stof (const char *str, float *f)
   assert (str);
   assert (f);
   errno = 0;
-  *f = strtof (str, &end);
+  *f = c_strtof (str, &end);
   /* No ERANGE and it should do a conversion and consume the whole string.  */
   return errno != 0 || end == str || *end != '\0';
 }
@@ -459,7 +460,7 @@ int pvm_stod (const char *str, double *d)
   assert (str);
   assert (d);
   errno = 0;
-  *d = strtod (str, &end);
+  *d = c_strtod (str, &end);
   /* No ERANGE and it should do a conversion and consume the whole string.  */
   return errno != 0 || end == str || *end != '\0';
 }
